[gd_scene load_steps=19 format=3 uid="uid://0x8brelfw3vi"]

[ext_resource type="Script" path="res://scenes/ball/bola.gd" id="1_36py3"]
[ext_resource type="Texture2D" uid="uid://dfoseeqifi4i1" path="res://scenes/ball/coast_sand_rocks_02_diff_4k.jpg" id="2_yle5u"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_slmmf"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_tfgah"]
[ext_resource type="AudioStream" uid="uid://8r0xk0y7vg6k" path="res://assets/Audio/rockHit23.wav" id="3_ukf7f"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_0ei4m"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="5_7lrs6"]
[ext_resource type="Script" path="res://scenes/ball/hit_on_something.gd" id="8_l0r3g"]
[ext_resource type="AudioStream" uid="uid://cn7ujjueuxlxu" path="res://assets/Audio/ball/stoneHit1.wav" id="9_dnpqu"]
[ext_resource type="AudioStream" uid="uid://bgpnvesm0cqgt" path="res://assets/Audio/ball/stoneHit2.wav" id="10_71w3n"]
[ext_resource type="AudioStream" uid="uid://k663sw0soxm" path="res://assets/Audio/ball/stoneHit3.wav" id="11_n2m0m"]
[ext_resource type="AudioStream" uid="uid://ifirgkj7go1a" path="res://assets/Audio/ball/stoneHit4.wav" id="12_ojek2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dmtwg"]
friction = 4.0
rough = true
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_x03cx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_423sr"]
albedo_texture = ExtResource("2_yle5u")

[sub_resource type="SphereMesh" id="SphereMesh_rii78"]
material = SubResource("StandardMaterial3D_423sr")

[sub_resource type="Resource" id="Resource_jhc7a"]
script = ExtResource("4_0ei4m")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_t0632"]
script = ExtResource("5_7lrs6")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[node name="bola" type="RigidBody3D" groups=["ball"]]
transform = Transform3D(1, -1.4212e-07, -3.49061e-05, 1.4212e-07, 1, -1.10628e-07, 3.49061e-05, 1.10628e-07, 1, 0, 0.537522, 0)
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_dmtwg")
angular_damp = 1.0
script = ExtResource("1_36py3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_x03cx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_rii78")
skeleton = NodePath("")

[node name="CameraRig" type="Marker3D" parent="."]

[node name="PhantomCamera3D" type="Node3D" parent="CameraRig" node_paths=PackedStringArray("follow_target", "look_at_target")]
transform = Transform3D(0.999946, 0, 0, 0, 0.888843, 0.458128, 0, -0.458094, 0.888911, 0.000160095, 3.07813, 4.57391)
script = ExtResource("3_slmmf")
follow_mode = 5
follow_target = NodePath("../../MeshInstance3D")
look_at_mode = 2
look_at_target = NodePath("../../MeshInstance3D")
tween_resource = SubResource("Resource_jhc7a")
camera_3d_resource = SubResource("Resource_t0632")
follow_offset = Vector3(0, 2.62, 3.685)
follow_damping = true
dead_zone_width = 0.385
dead_zone_height = 0.093
look_at_offset = Vector3(0, -4.5, -10.13)

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
unique_name_in_owner = true
transform = Transform3D(0.999946, 0, 0, -4.14209e-15, 0.888843, 0.458128, 0, -0.458094, 0.888911, 0.000160095, 3.07813, 4.57391)

[node name="PhantomCameraHost" type="Node" parent="CameraRig/Camera3D"]
script = ExtResource("3_tfgah")

[node name="VerificaChao" type="RayCast3D" parent="."]
transform = Transform3D(1, -3.76045e-15, 0, -3.93349e-15, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, 0)

[node name="HitOnSomething" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ukf7f")
bus = &"SoundEffects"
script = ExtResource("8_l0r3g")
sons = Array[AudioStream]([ExtResource("9_dnpqu"), ExtResource("10_71w3n"), ExtResource("11_n2m0m"), ExtResource("12_ojek2")])

[node name="HitTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
